[gd_scene load_steps=7 format=2]

[ext_resource path="res://encounter/submit_button_disabled.png" type="Texture" id=1]
[ext_resource path="res://encounter/scramble_button_disabled.png" type="Texture" id=2]
[ext_resource path="res://encounter/scramble_button.png" type="Texture" id=3]
[ext_resource path="res://encounter/submit_button.png" type="Texture" id=4]
[ext_resource path="res://encounter/submit_button.gd" type="Script" id=5]
[ext_resource path="res://encounter/encounter.gd" type="Script" id=6]

[node name="Encounter" type="ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_right = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect" type="ReferenceRect" parent="Box"]
margin_right = 640.0
margin_bottom = 532.0
size_flags_vertical = 3

[node name="StagingArea" type="ReferenceRect" parent="Box/Rect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandArea" type="ReferenceRect" parent="Box"]
margin_top = 536.0
margin_right = 640.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="ScrambleButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 150.0
margin_bottom = -32.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -64.0
margin_bottom = -32.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="staging_area_invalid_word" from="." to="SubmitButton" method="disable_submit_button"]
[connection signal="staging_area_valid_word" from="." to="SubmitButton" method="enable_submit_button"]
[connection signal="pressed" from="ScrambleButton" to="." method="scramble"]
[connection signal="pressed" from="SubmitButton" to="." method="submit_word"]
